--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello World</title>
-    <link rel="stylesheet" href="/screen.css">
-  </head>
-  <body>
-    <h1>Hello, World!</h1>
-  </body>
+
+<head lang="en">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Hello World</title>
+  <link rel="stylesheet" href="/screen.css">
+</head>
+
+<body>
+  <nav>
+    <ul>
+      <li>
+        <a href="#">Home</a>
+      </li>
+      <a href="#">About</a>
+      <li>
+        <a href="#">Blog</a>
+      </li>
+      <li>
+        <a href="#">How to Join</a>
+      </li>
+      <li>
+        <a href="#">Locations</a>
+      </li>
+    </ul>
+  </nav>
+  <h1>Hello, this is a website!</h1>
+</body>
+
 </html>
